--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "~5.1",
+        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.*",
         "php" : "^5.5 || ^7.0",
         "nategood/httpful": "^0.2"
     },
